# Storprosjekt

./: .gitignore  README.md
color_tuner/: README.md  package.xml  setup.cfg  setup.py
color_tuner/color_tuner/: color_tuner.py
color_tuner/config/: colors.yaml  colors_usb2.yaml
cube_detector/: README.md  compare.py  detector_core.py  evaluate.py  package.xml  setup.py
cube_detector/config/: camera_info_4k.yaml  camera_info_pc.yaml  camera_info_usb2.yaml  params.yaml  params_4k.yaml  params_pc.yaml  params_usb2.yaml
cube_detector/config/detect_params/: BigblurNoPreproc.yaml  BigblurPreproc.yaml  NoBlurNoPreproc.yaml  NoPreproc.yaml  NoShapeCheck.yaml  default.yaml
cube_detector/cube_detector/: color_detection.py  cube_detector.py  detector_core.py  evaluate.py  transformation.py
cube_detector/launch/: detect.launch.py
cube_interfaces/: CMakeLists.txt  README.md  package.xml
cube_interfaces/msg/: ColorCube.msg  ColorCubeArray.msg  ColorRange.msg  ColorRangeArray.msg  DetectedCube.msg  DetectedCubeArray.msg
robot_bringup/: README.md  package.xml  setup.py
robot_bringup/config/: camera_transform.yaml
robot_bringup/launch/: bringup.launch.py
robot_controller/: CMakeLists.txt  package.xml
robot_controller/launch/: robot_launch.py
robot_controller/src/: coordinator_node.cpp  moveit_controller.cpp  moveit_planner_node.cpp
task_manager/: README.md  package.xml  setup.py
task_manager/config/: move_group_params.yaml  ros_controllers.yaml  task_manager_params.yaml
task_manager/launch/: task_manager.launch.py
task_manager/task_manager/: task_manager_node.py
task_manager/task_manager/core/: __init__.py  detection.py  fake_hardware_node.py  parameters.py  robot_control.py  services.py  state_machine.py  states.py  visualization.py
task_manager/test/: integrated_test.py
tf2_utils/: package.xml  setup.cfg  setup.py
tf2_utils/tf2_utils/: tf2_utils.py
