<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>color_tuner</name>
  <version>0.0.0</version>
  <description>GUI for easy color tuning</description>
  <maintainer email="52103879+EvenRL@users.noreply.github.com">even</maintainer>
  <license>Apache-2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend>rclpy</depend>
  <depend>python_qt_binding</depend>
  <depend>PyYAML</depend>
  <depend>cube_interfaces</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
